src/themes/default/src/scss/_multiselect.scss
/* stylelint-disable selector-no-qualifying-type,
   selector-max-class, selector-max-compound-selectors,
   no-descending-specificity,
   function-calc-no-unspaced-operator,
*/
@use "slim-select/src/slim-select/slimselect.scss" with (
  $primary-color: $primary
);

// Multiselect Spacers
$multiselect-spacers: (
  "disabled-spacer": calc(map-get($spacers, 2) - 1px),
  "disabled-spacer-md": calc(map-get($spacers, 2) - 2px),
  "select-spacer": calc(map-get($spacers, 2) - 2px),
  "select-spacer-md": 0.075rem,
  "select-spacer-start": 0.3rem,
  "badge-padding-x": map-get($spacers, 1),
  "badge-padding-y": map-get($spacers, 1),
  "add-margin-top": map-get($spacers, "2-5"),
  "add-margin-top-md": map-get($spacers, 2),
  "icon-position-x": map-get($spacers, 4),
);

select.multi-select {
  position: absolute;
  // stylelint-disable declaration-no-important
  display: inline-block !important;
  max-width: 0;
  max-height: 35px;
  pointer-events: none;
  opacity: 0;
}

.ss-main.multi-select {
  padding: 0;
  &.form-select.is-invalid,
  &.form-select.is-valid {
    background: none;
    padding: 0;
  }
  .ss-values {
    @include font-size($h4-font-size);
    .ss-value {
      display: inline-block;
      padding: $badge-padding-y $badge-padding-x;
      @include font-size($badge-font-size);
      font-weight: $badge-font-weight;
      line-height: 1;
      color: $badge-color;
      text-align: center;
      white-space: nowrap;
      vertical-align: baseline;
      padding-right: map-get($spacers, "3-5");
      @include border-radius($badge-border-radius);
      @include gradient-bg();
      .ss-value-delete {
        font-size: 0;
        &:after {
          background-image: url("data:image/svg+xml,%3Csvg width='16' height='17' viewBox='0 0 16 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M16 8.5C16 12.9183 12.4183 16.5 8 16.5C3.58172 16.5 0 12.9183 0 8.5C0 4.08172 3.58172 0.5 8 0.5C12.4183 0.5 16 4.08172 16 8.5ZM5.35355 5.14645C5.15829 4.95118 4.84171 4.95118 4.64645 5.14645C4.45118 5.34171 4.45118 5.65829 4.64645 5.85355L7.29289 8.5L4.64645 11.1464C4.45118 11.3417 4.45118 11.6583 4.64645 11.8536C4.84171 12.0488 5.15829 12.0488 5.35355 11.8536L8 9.20711L10.6464 11.8536C10.8417 12.0488 11.1583 12.0488 11.3536 11.8536C11.5488 11.6583 11.5488 11.3417 11.3536 11.1464L8.70711 8.5L11.3536 5.85355C11.5488 5.65829 11.5488 5.34171 11.3536 5.14645C11.1583 4.95118 10.8417 4.95118 10.6464 5.14645L8 7.79289L5.35355 5.14645Z' fill='%23F8F9FA'/%3E%3C/svg%3E%0A");
          background-repeat: no-repeat;
          content: "";
          display: inline-block;
          height: 1rem;
          transform: scale(0.8);
          width: 1rem;
          padding: 15px;
          background-position: 50%;
          border-radius: 50%;
          position: absolute;
          right: 0;
          bottom: -2px;
        }
      }
    }
    .ss-disabled {
      padding-top: map-get($multiselect-spacers, "disabled-spacer");
      padding-bottom: map-get($multiselect-spacers, "disabled-spacer");
      @include font-size(1rem);
    }
  }
  .ss-multi-selected {
    border-color: $input-border-color;
    padding: map-get($multiselect-spacers, "select-spacer") 0
      map-get($multiselect-spacers, "select-spacer")
      map-get($multiselect-spacers, "select-spacer-start");
    &.ss-disabled {
      .ss-values {
        .ss-value {
          background: $gray-500;
        }
      }
    }
    .ss-add {
      margin-top: 0;
      align-self: center;
    }
  }
}

.ss-main.multi-select.is-invalid,
.ss-main.multi-select.is-valid,
.was-validated .multi-select:invalid + .ss-main.multi-select,
.was-validated .multi-select:valid + .ss-main.multi-select {
  .ss-multi-selected {
    background-repeat: no-repeat;
    background-position: right map-get($multiselect-spacers, "icon-position-x")
      center;
    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
  }
}
.ss-main.multi-select.is-invalid,
.was-validated .multi-select:invalid + .ss-main.multi-select {
  .ss-multi-selected {
    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM8 4C7.46459 4 7.04623 4.46229 7.0995 4.99504L7.45025 8.50248C7.47849 8.78492 7.71616 9 8 9C8.28384 9 8.52151 8.78492 8.54975 8.50248L8.9005 4.99504C8.95377 4.46228 8.53541 4 8 4ZM8.00154 10C7.44926 10 7.00154 10.4477 7.00154 11C7.00154 11.5523 7.44926 12 8.00154 12C8.55383 12 9.00154 11.5523 9.00154 11C9.00154 10.4477 8.55383 10 8.00154 10Z' fill='%23D72E3D'/%3E%3C/svg%3E%0A");
    border-color: $danger;
  }
  .ss-values {
    .ss-value {
      background: $danger;
    }
  }
}
.ss-main.multi-select.is-valid,
.was-validated .multi-select:valid + .ss-main.multi-select {
  .ss-multi-selected {
    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8ZM12.0303 4.96967C11.7374 4.67678 11.2626 4.67678 10.9697 4.96967C10.9626 4.97674 10.9559 4.98424 10.9498 4.9921L7.4774 9.41674L5.38388 7.32322C5.09098 7.03033 4.61611 7.03033 4.32322 7.32322C4.03032 7.61612 4.03032 8.09099 4.32322 8.38388L6.96966 11.0303C7.26256 11.3232 7.73743 11.3232 8.03032 11.0303C8.03685 11.0238 8.043 11.0169 8.04876 11.0097L12.041 6.01947C12.3232 5.72582 12.3196 5.25897 12.0303 4.96967Z' fill='%2328A745'/%3E%3C/svg%3E%0A");
    border-color: $success;
  }
  .ss-values {
    .ss-value {
      background: $success;
    }
  }
}

@include media-breakpoint-up(md) {
  .ss-main.multi-select {
    .ss-multi-selected {
      padding: map-get($multiselect-spacers, "select-spacer-md") 0
        map-get($multiselect-spacers, "select-spacer-md")
        map-get($multiselect-spacers, "select-spacer-start");
    }
    .ss-values {
      @include font-size(1rem);
      .ss-value {
        @include font-size($badge-font-size-desktop);
      }
      .ss-disabled {
        padding-top: calc(
          map-get($multiselect-spacers, "disabled-spacer-md") + 1px
        );
        padding-bottom: map-get($multiselect-spacers, "disabled-spacer-md");
      }
    }
  }

  .ss-main.multi-select.is-invalid,
  .ss-main.multi-select.is-valid,
  .was-validated .multi-select:invalid + .ss-main.multi-select,
  .was-validated .multi-select:valid + .ss-main.multi-select {
    .ss-multi-selected {
      background-position: right 1.6rem center;
    }
  }
}

